[gd_scene load_steps=3 format=3 uid="uid://bn5smhghx01wo"]

[ext_resource type="Script" path="res://menus/levelUp/level_up.gd" id="1_i3b0u"]
[ext_resource type="PackedScene" uid="uid://c0halqfs0qu4a" path="res://attacks/weapons/weapon_detecting.tscn" id="2_or6vl"]

[node name="LevelUp" type="ColorRect"]
process_mode = 2
custom_minimum_size = Vector2(120, 120)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -116.5
offset_top = -116.5
offset_right = 116.5
offset_bottom = 116.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_i3b0u")
new_weapon = ExtResource("2_or6vl")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(80, 70)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 1
color = Color(0.364706, 0.364706, 0.364706, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect"]
custom_minimum_size = Vector2(75, 60)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -37.5
offset_top = -30.0
offset_right = 37.5
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Level Up"

[node name="UpgradeCooldown" type="Button" parent="MarginContainer/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Upgrade Cooldown"

[node name="UpgradeSpeed" type="Button" parent="MarginContainer/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Upgrade Attack Speed"

[node name="UpgradeCombo" type="Button" parent="MarginContainer/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Upgrade Max Combo"

[node name="UpgradeComboSpeed" type="Button" parent="MarginContainer/ColorRect/VBoxContainer"]
layout_mode = 2
text = "Upgrade Combo Speed"

[connection signal="pressed" from="MarginContainer/ColorRect/VBoxContainer/UpgradeCooldown" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/VBoxContainer/UpgradeCooldown" to="." method="_on_upgrade_cooldown_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/VBoxContainer/UpgradeSpeed" to="." method="_on_upgrade_speed_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/VBoxContainer/UpgradeCombo" to="." method="_on_upgrade_combo_pressed"]
[connection signal="pressed" from="MarginContainer/ColorRect/VBoxContainer/UpgradeComboSpeed" to="." method="_on_upgrade_combo_speed_pressed"]
